# soft_ray_tracing

./: AABB.hpp  BVHnode.hpp  CMakeLists.txt  Camera.hpp  Hittable.hpp  Interval.hpp  Material.hpp  README.md  Ray.hpp  Sphere.hpp  Utility.hpp  main.copy.cpp  main.cpp
src/: AABB.hpp  BVHnode.hpp  Camera.hpp  HitTable.hpp  Material.hpp  Object.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  Texture.hpp  Transform.hpp  main.cpp  tgaimage.hpp
